--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>crates.io: Rust Package Registry</title>
+    <noscript>
+      <title>crates.io: Rust Package Registry</title>
+    </noscript>
 
     {{content-for 'head'}}
 
