--- a/app/index.html
+++ b/app/index.html
@@ -23,14 +23,13 @@
     <link rel="search" href="/opensearch.xml" type="application/opensearchdescription+xml" title="Cargo">
   </head>
   <body>
-    {{content-for 'body'}}
     <noscript>
-        <div id="main">
-            <div class='noscript'>
-                This site requires JavaScript to be enabled.
-            </div>
-        </div>
+      <div id='noscript'>
+        For full functionality of this site it is necessary to enable JavaScript.
+      </div>
     </noscript>
+    
+    {{content-for 'body'}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/cargo.js"></script>
