--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>crates.io: Rust Package Registry</title>
+
     {{content-for "head"}}
     {{content-for "test-head"}}
 
