--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="hsl(115, 31%, 31%)">
 
     <title>crates.io: Rust Package Registry</title>
 
