--- a/tests/index.html
+++ b/tests/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="hsl(115, 31%, 31%)">
 
     <title>crates.io: Rust Package Registry</title>
 
